# antibot-image-solver

./: .env.example  .gitignore  CHANGE_NOTES.md  LICENSE-STATUS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/lexicons/: animals.json
docs/: API.md  ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-29-claimcoin-low-confidence-fallback.md
src/antibot_image_solver/: __init__.py  __main__.py  capture.py  cli.py  matcher.py  models.py  normalize.py  ocr.py  ranker_shadow.py  solver.py
src/antibot_image_solver/adapters/: __init__.py  earncryptowrs.py
src/antibot_image_solver/api/: __init__.py  app.py  schemas.py
tests/: test_api.py  test_capture.py  test_claimcoin_final_label_regression.py  test_claimcoin_manual_label_regression.py  test_cli_capture.py  test_earncryptowrs_adapter.py  test_matcher.py  test_normalize.py  test_ocr_cache.py  test_ocr_runtime.py  test_ranker_shadow.py  test_ranker_shadow_provider.py  test_solver_hybrid.py  test_solver_shadow_hook.py  test_solver_shadow_provider_hook.py
tests/fixtures/: earncryptowrs_form.html
tools/: benchmark_ddddocr_claimcoin.py  claimcoin_eval_one.py  evaluate_claimcoin_history.py  label_claimcoin_antibot.py  label_claimcoin_web.py
